# kickflip

./: kickflip.db  pyproject.toml
app/: database.py  main.py
app/models/: users.py
app/routers/: auth.py
